[gd_scene load_steps=6 format=3 uid="uid://cadv4tubc7kg6"]

[ext_resource type="Script" path="res://UI/char_ui.gd" id="1_yijej"]

[sub_resource type="Gradient" id="Gradient_1u3un"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6h04f"]
gradient = SubResource("Gradient_1u3un")
width = 20
height = 160
fill_from = Vector2(1, 0)

[sub_resource type="Gradient" id="Gradient_bm6fp"]
colors = PackedColorArray(0.153867, 0.507479, 0.102083, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sbdgr"]
gradient = SubResource("Gradient_bm6fp")
width = 20
height = 160
fill_to = Vector2(0, 0)

[node name="CharUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -159.0
offset_right = -1921.0
offset_bottom = -1239.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yijej")

[node name="UnitInfo" type="Panel" parent="."]
layout_mode = 0
offset_right = 247.0
offset_bottom = 160.0

[node name="Name" type="Label" parent="UnitInfo"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.0
offset_top = 6.0
offset_right = 98.0
offset_bottom = 32.0
grow_horizontal = 2
text = "Unit Name"
horizontal_alignment = 1

[node name="AtkLabel" type="Label" parent="UnitInfo"]
layout_mode = 0
offset_left = 135.0
offset_top = 34.0
offset_right = 218.0
offset_bottom = 60.0
text = "Attack:"

[node name="HealthLabel" type="Label" parent="UnitInfo"]
layout_mode = 0
offset_left = 135.0
offset_top = 65.0
offset_right = 218.0
offset_bottom = 91.0
text = "Health:"

[node name="UnitImage" type="ColorRect" parent="UnitInfo"]
layout_mode = 0
offset_left = 5.0
offset_top = 34.0
offset_right = 124.0
offset_bottom = 155.0

[node name="MoveBar" type="TextureProgressBar" parent="UnitInfo"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -160.0
grow_horizontal = 0
grow_vertical = 0
value = 100.0
fill_mode = 3
texture_under = SubResource("GradientTexture2D_6h04f")
texture_progress = SubResource("GradientTexture2D_sbdgr")

[node name="EnemyInfo" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_top = -132.0
offset_right = 224.0

[node name="Name" type="Label" parent="EnemyInfo"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.0
offset_right = 98.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Unit Name"
horizontal_alignment = 1

[node name="AtkLabel" type="Label" parent="EnemyInfo"]
layout_mode = 0
offset_left = 135.0
offset_top = 34.0
offset_right = 218.0
offset_bottom = 60.0
text = "Attack:"

[node name="HealthLabel" type="Label" parent="EnemyInfo"]
layout_mode = 0
offset_left = 135.0
offset_top = 65.0
offset_right = 218.0
offset_bottom = 91.0
text = "Health:"

[node name="UnitImage" type="ColorRect" parent="EnemyInfo"]
layout_mode = 0
offset_left = 5.0
offset_top = 27.0
offset_right = 105.0
offset_bottom = 127.0
